# logz

./: .clang-format  CMakeLists.txt  README.md
include/cli/input/casters/: ArgumentCaster.hpp  StringArgumentCaster.hpp
include/cli/input/parsers/: ArgumentParser.hpp
include/common/interfaces/: IParser.hpp
include/math/: BasicComplex.hpp  CordicComplex.hpp
src/: main.cpp
src/cli/input/parsers/: ArgumentParser.cpp
